--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,10 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+
+    # Twitter tokens and keys
+    twitter_settings:
+        oauth_access_token: ''
+        oauth_access_token_secret: ''
+        consumer_key: ''
+        consumer_secret: ''
