Return and store in cache a list of tweets in uppercase

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,5 +75,7 @@ fos_rest:
     exception:
         enabled: true
         exception_controller: 'AppBundle\Controller\API\ExceptionController::show'
+        messages:
+            'AppBundle\Controller\API\Exceptions\TwitterConnectorException': true
     routing_loader:
         default_format: json
